# PTC-Traffic-Flow

./: .gitattributes  .gitignore  .replit  README.md  environment.yml  ptc_traffic_flow.code-workspace  pyproject.toml  pytest.ini  requirements.txt
.copilot/: codeGeneration-instructions.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
.streamlit/: config.toml  secrets.toml  secrets.toml.example
app/: DB_test_import_os.py  config.toml  data_load_checker.py  db_config_review.py  db_utils.py  drop_db.py  index_build.py  ingestion.py  init_db.py  log_config.py  main_app.py  models.py  stremlit_colour_pallet.py  traffic.py
attached_assets/: Pasted--1-Database-Data-Model-PostgreSQL-STATUS-NOT-IMPLEMENTED-Objective-use-SQLAlchemy--1744698888297.txt  Pasted--Configuration-for-logging-Explains-levels-and-filtering-Predefined-Levels-We-assign-a-spe-1744712721453.txt  Pasted--repl-nix-workspace-runner-8b7d9835c977-workspace-python-app-ingestion-py-2025-04-15-12-31-19-8-1744720456114.txt
ppm/: project_plan.md  tdd.md  testing_features.md
tests/: conftest.py  test_db_connection.py  test_db_operations.py  test_db_queries.py  test_db_setup.py  test_db_utils.py  test_db_utils_data.py  test_db_utils_engine_setup.py  test_db_utils_resources.py  test_db_utils_session_factory.py  test_feature1_data_access_validation.py  test_feature1_processing_logic.py  test_init_db_config.py  test_init_db_extension.py  test_init_db_schema.py  test_log_config_caller.py  test_log_config_output.py  test_log_config_sources.py  test_main_app.py  (+6 more)
(+20 files in other folders)
