
[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Traffic Flow Analysis Application"
requires-python = ">=3.12"
dependencies = [
    "geoalchemy2>=0.17.1",
    "holoviews>=1.20.2",
    "hvplot>=0.11.2",
    "pandas>=2.2.3",
    "panel>=1.6.2",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "logging>=0.5.1.2",
    "contextlib2>=21.6.0",
    "datetime>=5.4",
    "itertools>=8.12.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
